# gxde-requ

./: CMakeLists.txt  README.md  dde-requ.pro  gxde-requ.pro  main.cpp  requ.cpp  requ.h  widget.cpp  widget.h
debian/: README.Debian  changelog  control  copyright  rules  watch
k9/: gxde-requ.edging  gxde-requ.slimy
libexec/: close_window
src/: main.cpp  omd-requ.pro  requ.cpp  requ.h  widget.cpp  widget.h
